# Scion2D

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  LICENSE  README.md  Scion2D.sln
Dependencies/imgui/: CMakeLists.txt
Dependencies/imgui/src/: imgui.cpp  imgui.h
GLAD/: GLAD.vcxproj  (+1 more)
SCION_CORE/: CMakeLists.txt  README.md  SCION_CORE.vcxproj  SCION_CORE.vcxproj.filters
SCION_CORE/Core/CoreUtilities/: CoreEngineData.cpp  CoreEngineData.h  CoreUtilities.cpp  CoreUtilities.h  FollowCamera.cpp  FollowCamera.h
SCION_CORE/Core/ECS/: Entity.cpp  Entity.h  Entity.inl  MetaUtilities.cpp  MetaUtilities.h  Registry.cpp  Registry.h
SCION_CORE/Core/Resources/: AssetManager.cpp  AssetManager.h
SCION_CORE/Core/Scripting/: ContactListenerBind.cpp  ContactListenerBind.h  GlmLuaBindings.cpp  GlmLuaBindings.h  InputManager.cpp  InputManager.h  RendererBindings.cpp  SoundBindings.cpp  SoundBindings.h  UserDataBindings.cpp  UserDataBindings.h  UserDataBindings.inl
SCION_CORE/Core/States/: State.cpp  State.h  StateStack.cpp  StateStack.h
SCION_CORE/Core/Systems/: AnimationSystem.cpp  AnimationSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderShapeSystem.cpp  RenderShapeSystem.h  RenderSystem.cpp  RenderSystem.h  RenderUISystem.cpp  RenderUISystem.h  ScriptingSystem.cpp  ScriptingSystem.h
SCION_CORE/src/Character/: Character.cpp  PlayerStart.cpp
SCION_CORE/src/CoreUtilities/: CoreEngineData.cpp  CoreUtilities.cpp  FollowCamera.cpp  Prefab.cpp  ProjectInfo.cpp
SCION_CORE/src/ECS/: ECSUtils.cpp  Entity.cpp  MainRegistry.cpp  MetaUtilities.cpp  Registry.cpp
SCION_CORE/src/Events/: EngineEventTypes.cpp  EventDispatcher.cpp
SCION_CORE/src/Loaders/: TilemapLoader.cpp
SCION_CORE/src/Resources/: AssetManager.cpp
SCION_CORE/src/Scene/: Scene.cpp  SceneManager.cpp
SCION_CORE/src/Scripting/: ContactListenerBind.cpp  CrashLoggerTestBindings.cpp  GlmLuaBindings.cpp  InputManager.cpp  LuaFilesystemBindings.cpp  RendererBindings.cpp  ScriptingUtilities.cpp  SoundBindings.cpp  UserDataBindings.cpp
SCION_CORE/src/States/: State.cpp  StateMachine.cpp  StateStack.cpp
SCION_CORE/src/Systems/: AnimationSystem.cpp  PhysicsSystem.cpp  RenderPickingSystem.cpp  RenderShapeSystem.cpp  RenderSystem.cpp  RenderUISystem.cpp  ScriptingSystem.cpp
SCION_EDITOR/: CMakeLists.txt  README.md  SCION_EDITOR.vcxproj  SCION_EDITOR.vcxproj.filters  imgui.ini
SCION_EDITOR/assets/scripts/: follow_cam.lua  main.lua  rain_generator.lua  utilities.lua
SCION_EDITOR/assets/shaders/: basicShader.frag  basicShader.vert  circleShader.frag  circleShader.vert  colorShader.frag  colorShader.vert  fontShader.frag  fontShader.vert
SCION_EDITOR/assets/textures/: player_sheet_credits.txt
SCION_EDITOR/src/: Application.cpp  Application.h  main.cpp
SCION_ENGINE/: CMakeLists.txt  README.md
SCION_ENGINE/src/: Runtime.cpp  Runtime.h  main.cpp
SCION_FILESYSTEM/: CMakeLists.txt  README.md
SCION_FILESYSTEM/src/: DirectoryWatcher.cpp  FileDialog.cpp  FileProcessor_Unix.cpp  FileProcessor_Win.cpp  FilesystemUtilities.cpp  JSONSerializer.cpp  LuaSerializer.cpp
SCION_LOGGER/: CMakeLists.txt  README.md  SCION_LOGGER.vcxproj  SCION_LOGGER.vcxproj.filters
SCION_LOGGER/Logger/: Logger.cpp  Logger.h  Logger.inl
SCION_LOGGER/include/Logger/: CrashLogger.h  Logger.h  Logger.inl
SCION_LOGGER/src/: CrashLogger.cpp  Logger.cpp
SCION_PHYSICS/: CMakeLists.txt  README.md  SCION_PHYSICS.vcxproj  SCION_PHYSICS.vcxproj.filters
SCION_PHYSICS/Physics/: Box2DWrappers.cpp  ContactListener.cpp  ContactListener.h  UserData.cpp  UserData.h
SCION_PHYSICS/include/Physics/: Box2DWrappers.h  BoxTraceCallback.h  ContactListener.h  PhysicsUtilities.h  RayCastCallback.h  UserData.h
SCION_PHYSICS/src/: Box2DWrappers.cpp  BoxTraceCallback.cpp  ContactListener.cpp  PhysicsUtilities.cpp  RayCastCallback.cpp  UserData.cpp
SCION_RENDERING/: CMakeLists.txt  README.md  SCION_RENDERING.vcxproj  SCION_RENDERING.vcxproj.filters
SCION_RENDERING/Rendering/Buffers/: Framebuffer.cpp  Framebuffer.h
SCION_RENDERING/Rendering/Core/: BatchRenderer.cpp  BatchRenderer.h  Batcher.h  Camera2D.cpp  Camera2D.h  CircleBatchRenderer.cpp  CircleBatchRenderer.h  LineBatchRenderer.cpp  LineBatchRenderer.h  RectBatchRenderer.cpp  RectBatchRenderer.h  Renderer.cpp  Renderer.h  TextBatchRenderer.cpp  TextBatchRenderer.h
SCION_RENDERING/Rendering/Essentials/: BatchTypes.h  Font.cpp  Font.h  FontLoader.cpp  Primitives.h  Shader.cpp  Shader.h  ShaderLoader.cpp  ShaderLoader.h  Texture.cpp  Texture.h  TextureLoader.cpp  TextureLoader.h  Vertex.h
SCION_RENDERING/src/: BatchRenderer.cpp  Camera2D.cpp  CircleBatchRenderer.cpp  Font.cpp  FontLoader.cpp  Framebuffer.cpp  LineBatchRenderer.cpp  OpenGLDebugger.cpp  PickingBatchRenderer.cpp  PickingTexture.cpp  RectBatchRenderer.cpp  Renderer.cpp  Shader.cpp  ShaderLoader.cpp  TextBatchRenderer.cpp  Texture.cpp  TextureLoader.cpp
SCION_SOUNDS/: CMakeLists.txt  README.md  SCION_SOUNDS.vcxproj  SCION_SOUNDS.vcxproj.filters
SCION_SOUNDS/src/: Music.cpp  MusicPlayer.cpp  SoundFX.cpp  SoundFxPlayer.cpp
SCION_UTILITIES/: CMakeLists.txt  README.md  SCION_UTILITIES.vcxproj  SCION_UTILITIES.vcxproj.filters
SCION_UTILITIES/ScionUtilities/: RandomGenerator.cpp  RandomGenerator.h  SDL_Wrappers.cpp  SDL_Wrappers.h  Timer.cpp  Timer.h
SCION_UTILITIES/include/ScionUtilities/: HelperUtilities.h  MathUtilities.h  RandomGenerator.h  SDL_Wrappers.h  ScionUtilities.h  ThreadPool.h  Timer.h  Tween.h
SCION_UTILITIES/src/: RandomGenerator.cpp  SDL_Wrappers.cpp  ScionUtilities.cpp  Timer.cpp  Tween.cpp
SCION_WINDOW/: CMakeLists.txt  README.md  SCION_WINDOW.vcxproj  SCION_WINDOW.vcxproj.filters
SCION_WINDOW/Windowing/Inputs/: Button.cpp  Button.h  Gamepad.cpp  Keyboard.cpp  Keyboard.h  Keys.h  Mouse.cpp
SCION_WINDOW/Windowing/Window/: Window.cpp  Window.h
SCION_WINDOW/src/: Button.cpp  Gamepad.cpp  Keyboard.cpp  Mouse.cpp  Window.cpp
crash_reporter/: CMakeLists.txt
crash_reporter/src/: main.cpp
shared_pch/: CMakeLists.txt
shared_pch/pch/: pch.hpp
(+401 files in other folders)
